--- a/styles/components/classes.module.css
+++ b/styles/components/classes.module.css
@@ -159,7 +159,7 @@
   }
 
  .contactButton {
-  background-color: #e53e3e;
+  background-color: #ed1c28;
   color: #fff;
   padding: 0.75rem 1.5rem;
   border-radius: 0.25rem;
