--- a/styles/components/fightnight.module.css
+++ b/styles/components/fightnight.module.css
@@ -167,9 +167,8 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  height: 600px;
-  margin-top: 0.5rem;
-
+  height: 650px;
+  margin-top: 2rem;
 }
 
 
@@ -192,9 +191,8 @@
   .eventImage {
     width: 100%;
     height: 385px;
-    object-fit: cover;
-    object-position: top;
-    
+    object-fit: contain;
+    background-color: #000;
   }
   
   .eventInfo {
@@ -459,7 +457,7 @@
 
 .eventCard.active,
 .videoCard.active {
-  shadow: 0 0 24px #333;
+  box-shadow: 0 0 24px #333;
   transform: scale(1.04);
   z-index: 2;
 }
